Verion 1.0 RELEASE!!!!  Added permissions to broadcast and updated version number with the 1.0 release

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,8 @@
 name: LinkMe
-main: com.superiornetworks.plugins.linkme.ryanwild
-version: 0.5.5
-description: >
-             Link Me
+main: com.superiornetworks.plugins.linkme
+version: 1.0
+description: Link Me
+
 commands:
   site:
     description: Site website
