--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,17 +22,13 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-<<<<<<< HEAD
 dist.jar=${dist.dir}/LinkMe.jar
-=======
-dist.jar=${dist.dir}/CommandViewer.jar
->>>>>>> branch 'master' of https://github.com/Wild1145/CommandViewer.git
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Craftbukkit.jar.classpath}:\
+    ${libs.Craftbukkit.classpath}:\
     ${libs.CraftBukkit.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
