--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,11 @@ dist.jar=${dist.dir}/LinkMe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\craftbukkit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.CraftBukkit.classpath}
+    ${file.reference.craftbukkit.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
