--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
-
 name: LinkMe
 main: me.RyanWild.LinkMe.Linkme
+dev-url: http://dev.bukkit.org/bukkit-plugins/linkme/
 version: 1.0.1
 description: Link Me
 
