--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\craftbukk
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.craftbukkit.jar}
+    ${file.reference.craftbukkit.jar}:\
+    ${libs.CraftBukkit.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
