Failed at sorting some stuff our, not failed at adding the one and only BukkitLib

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.craftbukkit.jar}:\
-    ${libs.CraftBukkit.classpath}
+    ${libs.CraftBukkit.classpath}:\
+    ${libs.BukkitLib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
