--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: LinkMe
 main: me.RyanWild.LinkMe.Linkme
 dev-url: http://dev.bukkit.org/bukkit-plugins/linkme/
-version: 2.2
+version: 2.3
 description: Link Me
 
 commands:
@@ -17,6 +17,10 @@ commands:
     description: Mumble Server address
   ts:
     description: TS3 IP
+  twitch:
+    description: Twitch Steam
+  btwitch:
+    description: Broadcast Twitch Steam
   vent:
     description: vent IP
   facebook:
