--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,11 @@ dist.jar=${dist.dir}/LinkMe.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.BukkitLib.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\BukkitLib.jar
-file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\craftbukkit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.craftbukkit.jar}:\
-    ${file.reference.BukkitLib.jar}
+    ${libs.BukkitLib.classpath}:\
+    ${libs.CraftBukkit.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
