--- a/src/config.yml
+++ b/src/config.yml
@@ -4,81 +4,78 @@
 
 
 announcer: '[LinkMe]'
-
-
-# Site text goes here this is what is displayed before the URL
-sitetext: 'Our Website is located at'
-
-# Site url goes here
-site: 'http://www.website.com'
-
-# Forum text goes here this is what is displayed before the URL
-forumtext: 'Come visit our forum at'
-
-# Forum url goes here
-forum: 'http://www.forum.com'
-
-# TS3 text goes here this is what is displayed before the TS3 server IP
-ts3desc: 'Come visit our Teamspeak3 server at'
-
-# TS3 Server ip goes here
-ts3ip: 'ts.server.com'
-
-# Mumble Server information goes here
-mumbledesc: 'Join our mumble server at'
-
-# Mumble Server ip goes here
-mumbleip: 'mumble.server.com'
-
-# Vent text goes here this is what is displayed before the TS3 server IP
-ventdesc: 'Come visit our Ventrillo server at'
-
-# Vent Server ip goes here
-ventip: 'vent.server.com'
-
-# Facebook text goes here this is what is displayed before the Facebook URL
-facebookdesc: 'Come visit our Facebook page at'
-
-# Facebook Url goes here
-facebookurl: 'http://www.facebook.com'
-
-# Youtube text goes here this is what is displayed before the TS3 server IP
-youtubedesc: 'Come visit our Youtube page at'
-
-# Youtube Server Url goes here
-youtubeurl: 'http://youtube.com/usernamehere'
-
-# Twitch text goes here this is what is displayed before the Twitch url
-twitchdesc: 'Come visit our Twitch steam at'
-
-# Twitch Stream Url goes here
-twitchurl: 'http://www.twitch.tv/usernamehere'
-
-# Twitter text goes here this is what is displayed before the Twitter URL or @tag
-twitterdesc: 'Come visit our Twitter feed at'
-
-# Twitter Server Url goes here
-twitterurl: 'http://twitter.com/usernamehere'
-
-# Donation text goes here this is what is displayed before the Donation page URL
-donatordesc: 'Go have a look and check out our donation page at and remember every donation keeps the server running.'
-
-# Donation URL HERE
-donatorurl: 'http://www.superior-networks.com'
-
-# voice servers: What goes here will be broadcast at the begginig of the list
-voiceserverlist: 'This is a list of our Voice Servers'
-
-# Vote text goes here this is what is displayed before the URL
-votetext: 'Our Website is located at'
-
-# Vote url goes here
-vote: 'http://www.website.com'
-
-# Ranking up text goes here this is what is displayed before the URL
-ranktext: 'Our Website is located at'
-
-# ranks url goes here
-rankurl: 'http://www.website.com'
-
+# Donator
+Donator: 
+    info:
+        enabled: true
+        description: 'Go have a look and check out our donation page at and remember every donation keeps the server running.'
+        url: 'http://www.google.com'
+# Facebook
+Facebook:
+    info:
+        enabled: true
+        description: 'Come visit our Ventrillo server at'
+        url: 'http://www.google.com'
+# Forum
+Forums:
+    info:
+        enabled: true
+        description: 'Come visit our Forums at'
+        url: 'http://www.google.com'
+# Mumble
+Mumble:
+    info:
+        enabled: true
+        description: 'Come visit our Mumble server at'
+        ip: '127.0.0.1:9999'
+# Ranking Up
+RankingUp:
+    info:
+        enabled: true
+        description: 'Rank up information here' 
+# Teamspeak 3
+Teamspeak3:
+    info:
+        enabled: true
+        description: 'Come visit our Teamspeak 3 server at'
+        ip: 'http://www.google.com'
+# Twitch 
+Twitch:
+    info:
+        enabled: true
+        description: 'Come visit our Ventrillo server at'
+        url: 'http://www.google.com'
+# Twitter
+Twitter:
+    info:
+        enabled: true
+        description: 'Come visit our Ventrillo server at'
+        url: 'http://www.google.com'
+# Ventrillo
+Ventrillo:
+    info:
+        enabled: true
+        description: 'Come visit our Ventrillo server at'
+        ip: '127.0.0.1:9999'
+# VoiceList
+Voicelist:
+    info:
+        description: 'This is a list of our Voice Servers'
+# Voting
+Voting:
+    info:
+        enabled: true
+        description: 'Come visit our Ventrillo server at'
+        url: 'http://www.google.com'
+# Website
+Website:
+    info:
+        enabled: true
+        description: 'Come visit our Website at'
+        url: 'http://www.google.com'
+Youtube:
+    info:
+        enabled: true
+        description: 'You can find out Youtube page at'
+        url: 'http://www.youtube.com'
 # END OF CONFIG
