--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BukkitLib.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\BukkitLib.jar
-file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\craftbukkit.jar
+file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Development Server\\craftbukkit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.craftbukkit.jar}:\
-    ${file.reference.BukkitLib.jar}
+    ${file.reference.BukkitLib.jar}:\
+    ${file.reference.craftbukkit.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
