--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BukkitLib.jar=C:\\Users\\Kyle\\Desktop\\Heretics 2.0\\BukkitLib.jar
-file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Development Server\\craftbukkit.jar
+file.reference.craftbukkit.jar=C:\\Users\\Kyle\\Desktop\\Development Server\\BK\\craftbukkit.jar
 includes=**
 jar.compress=false
 javac.classpath=\
