--- a/src/config.yml
+++ b/src/config.yml
@@ -36,14 +36,14 @@ Donator:
 Facebook:
     info:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come visit our Facebook page at'
         url: 'http://www.google.com'
         
 # Forum settings go here
 Forums:
     info:
         enabled: true
-        description: 'Come visit our Forums at'
+        description: 'Come visit the Forums at'
         url: 'http://www.google.com'
         
 # Mumble settings go here
@@ -64,13 +64,13 @@ Teamspeak3:
     info:
         enabled: true
         description: 'Come visit our Teamspeak 3 server at'
-        ip: 'http://www.google.com'
+        ip: '127.0.0.1:9987'
         
 # Twitch settings go here
 Twitch:
     info:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come visit our Twitch page at'
         url: 'http://www.google.com'
 
 # Twitter
@@ -96,43 +96,43 @@ VoiceList:
 Vote:
     VoteLink01:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink02:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink03:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink04:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink05:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink06:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink07:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink08:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink09:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
     VoteLink10:
         enabled: true
-        description: 'Come visit our Ventrillo server at'
+        description: 'Come vote for us at'
         url: 'http://www.google.com'
 
 # Website settings go here
@@ -160,18 +160,18 @@ Staff-Ranks:
         title: 'Owner'
         name: 'Usernamehere'
         facebook: 'http://www.facebook.com/NameHere'
-        twitter: '@hubert'
+        twitter: 'http://www.twitter.com'
     Info2:
         enabled: true
         title: 'Owner'
         name: 'Usernamehere'
         facebook: 'http://www.facebook.com/NameHere'
-        twitter: '@hubert'
+        twitter: 'http://www.twitter.com'
     Info3:
         enabled: true
         title: 'Owner'
-        facebook: 'http://www.facebook.com/NameHere'
         name: 'Usernamehere'
-        twitter: '@hubert'
+        facebook: 'http://www.facebook.com/NameHere'
+        twitter: 'http://www.twitter.com'
 
 # END OF CONFIG
