--- a/src/messages.yml
+++ b/src/messages.yml
@@ -9,6 +9,11 @@
 ## url / ip - The actual URL / IP of the media source.
 
 
+
+# If you would like a list of the comptabile colour codes please visit 
+# http://minecraft.gamepedia.com/Formatting_codes#Color_codes
+
+
 #Donator settings go here
 Donator: 
     info:
