Fixed a slight issue with packages. Moved to version 2.7.1 to reflect.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Link-Me
-main: me.Source.LinkMe.Linkme
-version: 2.7
+main: Me.RyanWild.Kyled1986.LinkMe.LinkMe
+version: 2.7.1
 description: Link Me
 
 commands:
