--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: Link-Me
-main: Me.RyanWild.Kyled1986.LinkMe.LinkMe
+main: Me.RyanWild.Kyled1986.LinkMe.Linkme
 version: 2.7.1
 description: Link Me
 
