Added announcer was missed off on transfer of messages.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.BukkitLib.classpath}:\
-    ${libs.CraftBukkit.classpath}
+    ${libs.Bukkit.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
