--- a/src/messages.yml
+++ b/src/messages.yml
@@ -13,6 +13,7 @@
 # If you would like a list of the comptabile colour codes please visit 
 # http://minecraft.gamepedia.com/Formatting_codes#Color_codes
 
+announcer: [LM]
 
 #Donator settings go here
 Donator: 
