--- a/src/config.yml
+++ b/src/config.yml
@@ -1,6 +1,6 @@
-#########################
-####  LINK-ME V2.7    ###
-#########################
+###########################
+####  LINK-ME V2.7.2    ###
+###########################
 
 
 
@@ -11,6 +11,11 @@
 ## Change the name of the announcer here this is global and will show in every command
 announcer: '[LinkMe]'
 nopermission: 'Sorry you do not have permission to do this, please contact your system adminstrator'
+
+#####################################
+# FEATURES BELOW ARE IN DEVELOPMENT #
+#####################################
+
 ###################
 # MySQL SETTINGS  #
 ###################
