Added new command set - Pass 2

--- a/src/messages.yml
+++ b/src/messages.yml
@@ -47,6 +47,11 @@ RankingUp:
         enabled: true
         description: 'Rank up information here'
         
+# Set
+Set:
+    info:
+        enabled: true
+        
 # Teamspeak 3 settings go here
 Teamspeak3:
     info:
